# ouroGraph

./: .gitignore  .gitmodules  BaseCMake.cmake  CMakeLists.txt  README.md
include/: EdgeUpdate.h  GraphDefinitions.h  MemoryLayout.h  Parameters.h  PerformanceMeasurement.cuh  Verification.h
include/algorithms/: BFS.cuh  BFS_impl.cuh  PageRank.cuh  PageRank_impl.cuh  STC.cuh  STC_impl.cuh
include/device/: AdjacencyIterator.cuh  EdgeDeletion.cuh  EdgeInsertion.cuh  EdgeUpdate.cuh  Helper.cuh  Initialization.cuh  VertexDeletion.cuh  VertexInsertion.cuh  VertexMapper.cuh  VertexUpdate.cuh  ouroGraph.cuh  ouroGraph_impl.cuh
src/: main.cu  vertex_test.cu
src/algorithms/: BFS.cu  PageRank.cpp  PageRank.cu  STC.cpp  STC.cu
tests/: test_bfs.json  test_edgeupdate.json  test_linux.json  test_pagerank.json  test_small.json  test_stc.json  test_vertexupdate.json
